Updating the images

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -181,3 +181,272 @@ News section
 .orientation-left-mobile, .campus-left-mobile, .guest-left-mobile {
     display: none;
 }
+/* 
+Start learning section 
+*/
+.sl-container {
+    background-color: var(--lightest-grey);
+    padding: 2% 5% 8% 5%;
+}
+
+.sl-container > h1 {
+    text-align: center;
+    color: var(--dark-grey);
+    padding: 4%;
+}
+
+/**** Start learning grid ****/
+.sl-grid-wrapper {
+    display: grid;
+    /* grid-template-columns: repeat(auto-fill, minmax(30%, 1fr)); */
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2%;
+}
+
+.sl-grid-wrapper img {
+    width: 100%;
+}
+
+
+/**** Start learning individual card****/
+.sl-grid-wrapper > * {
+    display: flex;
+    flex-direction: column;
+}
+
+.sl-info {
+    background-color: white;
+    padding: 5%;
+}
+
+.sl-info > * {
+    padding: 3% 0;
+}
+
+.sl-info > p {
+    font-size: small;
+    color: var(--light-grey);
+}
+
+.sl-mobile {
+    display: none;
+}
+
+/* 
+Thesis exhibit section 
+*/
+.thesis-container > h1 {
+    color: var(--dark-grey);
+    text-align: center;
+    padding: 5%;
+}
+
+.thesis-grid {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+}
+
+
+/**** Urban container ****/
+.urban-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 3%;
+}
+
+.urban-video > video {
+    width: 100%;
+}
+
+.urban-info {
+    padding: 1% 0 5% 0;
+}
+
+.urban-info > * {
+    padding: 1% 0;
+}
+
+.urban-info > p {
+    font-size: small;
+    color: var(--dark-grey);
+}
+
+/**** Other thesis container ****/
+.other-thesis-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.other-thesis-container img {
+    width: 10rem;
+}
+
+.other-thesis-container p{
+    font-size: small;
+    color: var(--dark-grey)
+}
+
+.fisma, .now-and-then {
+    display: flex;
+    padding: 5%;
+}
+
+.fisma {
+    background-color: var(--lightest-grey);
+}
+
+.fisma-info, .nt-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.fisma-info > *, .nt-info>* {
+    padding: 1%;
+    margin: 5% 8%;
+}
+
+/* 
+Footer 
+*/
+footer {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid var(--light-grey);
+    margin-bottom: 1%;
+}
+
+footer > * {
+    font-size:small;
+    color: var(--dark-grey);
+    margin-top: 0;
+    padding-top: 0.5%;
+}
+
+footer ul {
+    display: flex;
+    list-style: none;
+}
+
+footer a {
+    text-decoration: none;
+    color: var(--dark-grey)
+}
+
+footer li {
+    padding: 0 1em;
+}
+
+
+/* Mobile responsiveness */
+@media only screen and (max-width: 580px) {
+    /* Navigation bar */
+    nav > .logo, nav > ul {
+        display: none;
+    }
+
+    .mobile-nav {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        align-items: center;
+        grid-gap: 70%;
+        margin: 2% 3%;
+    }
+
+    /* Hero section */
+    .hero-container {
+        flex-direction: column;
+        padding: 0 0 5% 0;
+    }
+
+    .hero-container img {
+        width: 100%;
+    }
+
+    .hero-right button {
+        background-color: var(--light-grey);
+        border: none;
+        font-size: 100%;
+    } 
+
+    /* News section */
+    .news-left {
+        display: none;
+    }
+
+    .news-container {
+        grid-template-columns: 1fr;
+    }
+
+    .news-right > * {
+        display: flex;
+        flex-direction: column;
+        font-size: 120%;
+    }
+
+    .orientation-left-desktop, .campus-left-desktop, .guest-left-desktop {
+        display: none;
+    }
+
+    .news-right img {
+        width: 100%;
+    }
+
+    .orientation-left-mobile, .campus-left-mobile, .guest-left-mobile {
+        display: inline;
+    }
+
+    .guest {
+        background-color: white;
+    }
+
+    /* Start learning section */
+    .sl-container {
+        background-color: white;
+    }
+
+    .sl-grid-wrapper {
+        display: none;
+    }
+
+    .sl-mobile {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sl-mobile > * {
+        background-color: var(--lightest-grey);
+        color: var(--dark-grey);
+        height: 5rem;
+        margin: 1%;
+        text-decoration: none;
+    }
+
+    .sl-mobile h1 {
+        padding: 5%;
+    }
+
+    /* Thesis exhibit section */
+    .urban-info, .other-thesis-container {
+        display: none;
+    }
+
+    .thesis-grid {
+        grid-template-columns: 1fr;
+    }
+
+    /* Footer section */
+    footer {
+        padding: 10% 0 2%;
+    }
+
+    footer ul {
+        display: none;
+    }
+
+    footer p {
+        font-size: 100%;
+    }
+    
+}
+  
